<resources>
    <string name="app_name">Nasa App</string>
    <string name="photo_of_the_day">Photo of the Day</string>
    <string name="api_error">You need API Key</string>
    <string name="error_appstate">Error</string>
    <string name="reload_appstate">Reload</string>
    <string name="error_url_empty">Url is Empty</string>
    <string name="search_wiki">Wiki Search</string>
    <string name="wiki_helper_text">Look up on Wiki</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="earth_epic">Epic Earth Photo from Nasa</string>
    <string name="mars">Mars photo from Nasa</string>
    <string name="yesterday">yesterday</string>
    <string name="today">today</string>
    <string name="the_day_before_yesterday">the day before yesterday</string>
    <string name="example_description">This lovely starfield spans some four full moons.</string>
    <string name="example_header">Two Clusters and a Comet</string>
    <string name="galaxy_theme">Galaxy Theme</string>
    <string name="mars_theme">Mars Theme</string>
    <string name="moon_theme">Moon Theme</string>
    <string name="default_theme">Default Theme</string>
    <string name="apply_theme">Apply Theme</string>
    <string name="choose_theme">Click it to choose</string>
    <string name="earth_tab">Earth</string>
    <string name="mars_tab">Mars</string>
    <string name="moon_tab">Moon</string>
    <string name="home">Home</string>
    <string name="video">"Сегодня у нас без картинки дня, но есть  видео дня! "</string>
    <string name="sputnik_tab">Sputnik</string>
    <string name="chips_today">Today</string>
    <string name="chip_yesterday">Yesterday</string>
    <string name="chip_before_yesterday">Before Yesterday</string>
    <string name="about_app_description">Welcome to the NASA API portal. The objective of this site is to make NASA data, including imagery, eminently accessible to application developers. This catalog focuses on broadly useful and user friendly APIs and does not hold every NASA API</string>
    <string name="about">About App</string>
    <string name="solar_system">Solar System</string>
    <string name="about_title">About NASA portal</string>
    <string name="title_picture_of_day">Hello, here is a picture of a day!</string>
    <string name="explosion_game">Explosion Game</string>
    <string name="dialog_apply">Yes, i will</string>
    <string name="dialog_title">Hello, dear User!</string>
    <string name="dialog_message">This is just a game. But, please, do not explode and destroy our Planet. Save the nature. Thank you!</string>
    <string name="favourite_pictures">Here is your favourite pictures</string>
    <string name="empty_string"> </string>
    <string name="notes_header">Notes Header</string>
    <string name="notes_description">Descriprion of note</string>
    <string name="notes">Notes</string>
    <string name="space_notes">Space Notes</string>
    <string name="notes_full_description">Достижения НАСА в 2020: Астрономы подтвердили существование первой планеты вокруг белого карлика, используя данные Тесс и отставного космического телескопа Спитцера. Впервые ученые обнаружили воду на освещенной солнцем стороне Луны с помощью воздушной обсерватории НАСА София.</string>
    <string name="menu_search">Search</string>
    <string name="title_note">Earth Title</string>
    <string name="title_description">description note</string>
    <string name="settings_header">Which side theme do you choose?</string>
    <string name="about_quote">"That's one small step for man, one giant leap for mankind." © Neil Armstrong</string>
    <string name="search">Search</string>
    <string name="note_icon">Note\'s Icon</string>
</resources>