<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_fav"
        android:icon="@drawable/ic_favourite_menu"
        android:title="@string/favourite"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_menu"
        android:title="@string/settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/info"
        android:title="@string/about"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_solar"
        android:icon="@drawable/ic_system"
        android:title="@string/solar_system"
        app:showAsAction="always" />
</menu>