<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.settings.SettingsFragment">

    <RadioGroup
        android:id="@+id/radioButtonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierTextView">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonGalaxyTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40dp"
            android:text="@string/galaxy_theme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMarsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mars_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButtonGalaxyTheme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMoonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moon_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButtonMarsTheme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonDefaultTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButtonMoonTheme" />
    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewChooseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_theme"
        android:textSize="@dimen/text_size_explanation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="textViewChooseTheme" />

</androidx.constraintlayout.widget.ConstraintLayout>