<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/CustomOutlinedBox"
        android:hint="@string/search_wiki"
        app:endIconMode="custom"
        app:helperText="@string/wiki_helper_text"
        android:layout_marginBottom="@dimen/margin_8dp"
        app:layout_constraintBottom_toTopOf="@+id/customImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</com.google.android.material.textfield.TextInputLayout>

    <com.example.nasaapp.utils.CustomImageView
        android:id="@+id/customImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleType="center"
        android:contentDescription="@string/photo_of_the_day"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_launcher_background"/>

    <include
        android:id="@+id/includedLoadingLayout"
        layout="@layout/loading_layout"/>
</androidx.constraintlayout.widget.ConstraintLayout>